--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         $(function () {
             var socket = io();
             $('form').submit(function () {
-                socket.emit('chat message', $('#m').val());
+                socket.emit('msg', $('#m').val());
                 $('#m').val('');
                 return false;
             });
-            socket.on('chat message', function (msg) {
-                $('#messages').append($('<li>').text(msg));
+            socket.on('msg', function (msg) {
+                $('#messages').append($('<li>').json(msg));
             });
         });
     </script>
